--- a/requirements.txt
+++ b/requirements.txt
@@ -10,17 +10,15 @@ python-dotenv==1.0.0
 aiohttp==3.9.1
 requests==2.31.0
 
-# AI/ML 관련
+# AI/ML 관련 (선택적)
 langgraph
 langchain-google-genai
 google-generativeai
-
-# 유튜브 관련
-youtube-transcript-api==1.2.1
-yt-dlp==2024.3.10
-
-# 음성 인식
 openai-whisper==20231117
 
+# 유튜브 관련
+yt-dlp==2024.3.10
+youtube-transcript-api==1.2.1
+
 # 기타 유틸리티
-typing-extensions>=4.8.0 
+typing-extensions>=4.8.0
